# sam-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/sam_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sam.h
app/src/main/java/com/example/sam_android/: SamLib.java  SamUtils.java  SegPicActivity.java
app/src/main/res/layout/: activity_seg_pic.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/sam_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
